// Vitest Snapshot v1

exports[`Anchor > Anchor baseVue demo works fine 1`] = `
<div
  style="display: flex;"
>
  <div
    style="flex: 1;"
  />
  <t-anchor
    affixprops="[object Object]"
  >
    <t-anchor-item
      href="#基础锚点"
      title="基础锚点"
    />
    <t-anchor-item
      href="#多级锚点"
      title="多级锚点"
    />
    <t-anchor-item
      href="#指定容器锚点"
      title="指定容器锚点"
    />
    <t-anchor-item
      href="#特定交互锚点"
      title="特定交互锚点"
    />
    <t-anchor-item
      href="#不同尺寸的锚点"
      title="不同尺寸的锚点"
    />
  </t-anchor>
</div>
`;

exports[`Anchor > Anchor containerVue demo works fine 1`] = `
<div
  class="anchor-demo anchor-container-demo"
  data-v-5085b42e=""
>
  <t-anchor
    container="#anchor-container"
    data-v-5085b42e=""
  >
    <t-anchor-item
      data-v-5085b42e=""
      href="#content-1"
      title="content-1"
    />
    <t-anchor-item
      data-v-5085b42e=""
      href="#content-2"
      title="content-2"
    />
    <t-anchor-item
      data-v-5085b42e=""
      href="#content-3"
      title="content-3"
    />
    <t-anchor-item
      data-v-5085b42e=""
      href="#content-4"
      title="content-4"
    />
  </t-anchor>
  <div
    data-v-5085b42e=""
    id="anchor-container"
  >
    <div
      class="anchor-content-1"
      data-v-5085b42e=""
      id="content-1"
    >
      anchor-content-1
    </div>
    <div
      class="anchor-content-2"
      data-v-5085b42e=""
      id="content-2"
    >
      anchor-content-2
    </div>
    <div
      class="anchor-content-3"
      data-v-5085b42e=""
      id="content-3"
    >
      anchor-content-3
    </div>
    <div
      class="anchor-content-4"
      data-v-5085b42e=""
      id="content-4"
    >
      anchor-content-4
    </div>
    <div
      class="anchor-content-5"
      data-v-5085b42e=""
      id="content-5"
    >
      anchor-content-5
    </div>
  </div>
</div>
`;

exports[`Anchor > Anchor cursorVue demo works fine 1`] = `
<div
  class="anchor-demo"
  data-v-0c89850e=""
>
  <t-anchor
    bounds="150"
    data-v-0c89850e=""
  >
    <t-anchor-item
      data-v-0c89850e=""
      href="#基础锚点"
      title="基础锚点"
    />
    <t-anchor-item
      data-v-0c89850e=""
      href="#多级锚点"
      title="多级锚点"
    />
    <t-anchor-item
      data-v-0c89850e=""
      href="#指定容器锚点"
      title="指定容器锚点"
    />
    <t-anchor-item
      data-v-0c89850e=""
      href="#特定交互锚点"
      title="特定交互锚点"
    />
    <t-anchor-item
      data-v-0c89850e=""
      href="#尺寸"
      title="尺寸"
    />
  </t-anchor>
</div>
`;

exports[`Anchor > Anchor largeVue demo works fine 1`] = `
<t-anchor
  data-v-4dca4868=""
  size="large"
>
  <t-anchor-item
    data-v-4dca4868=""
    href="#基础锚点"
    title="基础锚点"
  />
  <t-anchor-item
    data-v-4dca4868=""
    href="#多级锚点"
    title="多级锚点"
  />
  <t-anchor-item
    data-v-4dca4868=""
    href="#指定容器锚点"
    title="指定容器锚点"
  />
  <t-anchor-item
    data-v-4dca4868=""
    href="#特定交互锚点"
    title="特定交互锚点"
  />
  <t-anchor-item
    data-v-4dca4868=""
    href="#尺寸"
    title="尺寸"
  />
</t-anchor>
`;

exports[`Anchor > Anchor multipleVue demo works fine 1`] = `
<div
  class="anchor-demo"
>
  <t-anchor
    bounds="150"
  >
    <t-anchor-item
      href="#基础锚点"
      title="基础锚点"
    />
    <t-anchor-item
      href="#多级锚点"
      title="多级锚点"
    />
    <t-anchor-item
      href="#指定容器锚点"
      title="指定容器锚点"
    />
    <t-anchor-item
      href="#特定交互锚点"
      title="特定交互锚点"
    />
    <t-anchor-item
      href="#尺寸"
      title="尺寸"
    />
  </t-anchor>
</div>
`;

exports[`Anchor > Anchor smallVue demo works fine 1`] = `
<div
  class="anchor-demo"
  data-v-804f4798=""
>
  <t-anchor
    data-v-804f4798=""
    size="small"
  >
    <t-anchor-item
      data-v-804f4798=""
      href="#基础锚点"
      title="基础锚点"
    />
    <t-anchor-item
      data-v-804f4798=""
      href="#多级锚点"
      title="多级锚点"
    />
    <t-anchor-item
      data-v-804f4798=""
      href="#指定容器锚点"
      title="指定容器锚点"
    />
    <t-anchor-item
      data-v-804f4798=""
      href="#特定交互锚点"
      title="特定交互锚点"
    />
    <t-anchor-item
      data-v-804f4798=""
      href="#尺寸"
      title="尺寸"
    />
  </t-anchor>
</div>
`;

exports[`Anchor > Anchor targetVue demo works fine 1`] = `
<div
  class="anchor-demo"
>
  <t-anchor-target
    id="#anchor-target-1"
  >
    定义
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-2"
  >
    服务功能
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-3"
  >
    使用指南
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-4"
  >
    创建签名
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-5"
  >
    创建内容
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-6"
  >
    保密协议
  </t-anchor-target>
  <t-anchor-target
    id="#anchor-target-7"
  >
    其他
  </t-anchor-target>
</div>
`;
